--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,60 +1,59 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
 
 en:
+
   devise:
-    confirmations:
-      confirmed: "Your email address has been successfully confirmed."
-      send_instructions: "You will receive an email with instructions for how to confirm your email address in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions for how to confirm your email address in a few minutes."
     failure:
-      already_authenticated: "You are already signed in."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      already_authenticated: 'Ya está dentro del sistema.'
+      unauthenticated: 'Necesita ingresar o registrarse para continuar.'
+      unconfirmed: 'Debe confirmar su cuenta para continuar.'
+      locked: 'Su eucnta está bloqueada.'
+      invalid: 'Correo o contraseña invalidos.'
+      invalid_token: 'Ficha de autenticación invalida.'
+      timeout: 'Su sesión ha expirado, por favor ingrese nuevamente para continuar.'
+      inactive: 'Su cuenta aún no ha sido activada.'
+    sessions:
+      signed_in: 'Ingreso exitoso.'
+      signed_out: 'Usted ha salido del sistema.'
+    passwords:
+      send_instructions: 'Recibirá un correo electrónico con instrucciones sobre como reiniciar su contraseña en unos minutos.'
+      updated: 'Su contraseña fue cambiada exitosamente y ha sido ingresado al sistema.'
+      updated_not_active: 'Su contraseña se cambió exitosamente.'
+      send_paranoid_instructions: "Si su correo electrónico existe en nuestra base de datos, usted recibirá un enlace para reiniciar su contraseña en unos minutos."
+    confirmations:
+      send_instructions: 'Usted recibirá un correo electrónico con instrucciones sobre como confirmar su cuenta en unos minutos.'
+      send_paranoid_instructions: 'Si su correo electrónico existe en nuestra base de datos, usted recibirá un correo con instrucciones sobre como confirmar su cuenta en unos minutos.'
+      confirmed: 'Su cuenta fue confirmada exitosamente, usted ha sido ingresado al sistema.'
+    registrations:
+      signed_up: '¡Bienvenido! Ha ingresado al sistema exitosamente.'
+      inactive_signed_up: 'Se ha registrado exitosamente, sin embargo, debido a que su cuenta esta %{reason}.'
+      updated: 'Usted actualizó su cuenta exitosamente.'
+      destroyed: '¡Hasta luego! Su cuenta fue cancelada con éxito, esperamos verle de nuevo pronto. Gracias.'
+      reasons:
+        inactive: 'inactiva'
+        unconfirmed: 'sin confirmar'
+        locked: 'bloqueada'
+    unlocks:
+      send_instructions: 'Recibirá un correo electrónico con instrucciones sobre como desbloquear su cuenta en unos minutos.'
+      unlocked: 'Su cuenta fue exitosamente desbloqueada, usted ha sido ingresado al sistema.'
+      send_paranoid_instructions: 'Si su cuenta existe, usted recibirá un correo electrónico con instrucciones sobre como desbloquear su cuenta en unos minutos.'
+    omniauth_callbacks:
+      success: 'Exitosamente autorizado desde la cuenta %{kind}.'
+      failure: 'No se le pudo autorizar en %{kind} debido a "%{reason}".'
     mailer:
       confirmation_instructions:
-        subject: "Confirmation instructions"
+        subject: 'Instrucciones de Confirmación'
       reset_password_instructions:
-        subject: "Reset password instructions"
+        subject: 'Instrucciones de reinicio de contraseña'
       unlock_instructions:
-        subject: "Unlock instructions"
-    omniauth_callbacks:
-      failure: "Could not authenticate you from %{kind} because \"%{reason}\"."
-      success: "Successfully authenticated from %{kind} account."
-    passwords:
-      no_token: "You can't access this page without coming from a password reset email. If you do come from a password reset email, please make sure you used the full URL provided."
-      send_instructions: "You will receive an email with instructions on how to reset your password in a few minutes."
-      send_paranoid_instructions: "If your email address exists in our database, you will receive a password recovery link at your email address in a few minutes."
-      updated: "Your password has been changed successfully. You are now signed in."
-      updated_not_active: "Your password has been changed successfully."
-    registrations:
-      destroyed: "Bye! Your account has been successfully cancelled. We hope to see you again soon."
-      signed_up: "Welcome! You have signed up successfully."
-      signed_up_but_inactive: "You have signed up successfully. However, we could not sign you in because your account is not yet activated."
-      signed_up_but_locked: "You have signed up successfully. However, we could not sign you in because your account is locked."
-      signed_up_but_unconfirmed: "A message with a confirmation link has been sent to your email address. Please follow the link to activate your account."
-      update_needs_confirmation: "You updated your account successfully, but we need to verify your new email address. Please check your email and follow the confirm link to confirm your new email address."
-      updated: "Your account has been updated successfully."
-    sessions:
-      signed_in: "Signed in successfully."
-      signed_out: "Signed out successfully."
-      already_signed_out: "Signed out successfully."
-    unlocks:
-      send_instructions: "You will receive an email with instructions for how to unlock your account in a few minutes."
-      send_paranoid_instructions: "If your account exists, you will receive an email with instructions for how to unlock it in a few minutes."
-      unlocked: "Your account has been unlocked successfully. Please sign in to continue."
-  errors:
+        subject: 'Instrucciones de desbloqueo'
+
+        errors:
     messages:
-      already_confirmed: "was already confirmed, please try signing in"
-      confirmation_period_expired: "needs to be confirmed within %{period}, please request a new one"
-      expired: "has expired, please request a new one"
-      not_found: "not found"
-      not_locked: "was not locked"
+      expired: "ha expirado, por favor pida uno nuevo"
+      not_found: "no encontrado"
+      already_confirmed: "ya está confirmada, por favor intente ingresar"
+      not_locked: "no está bloqueada"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        one: "1 error evitó que este %{resource} fuera guardado:"
+        other: "%{count} errores evitaron que este %{resource} fuera guardado:"
